src/scss/pages/_projects.scss
.nav--projects {
  position: fixed;
  top: 0;
}

.projects {
  display: block;
  padding: 30vh 2rem 15vh 2rem;
  @include respond-to(650px) {
    display: grid;
    grid-template-columns: 1fr 60% 1fr;
    min-height: 100vh;
    padding: 30vh 0 20vh 0;
  }
}

.info--projects {
  @include respond-to(650px) {
    width: 100%;
    grid-column: 2;
  }
}

.project__intro {
  @include respond-to(650px) {
    width: 70%;
  }
}

.content__title {
  margin-bottom: 1em;
}

